# GameOfLife

./: CMakeLists.txt  CMakeSettings.json  GameOfLife.cpp
Grid/: CMakeLists.txt  Grid.cpp  Grid.h
libs/: CMakeLists.txt
libs/SFML-2.5.1/install/lib/: sfml-network.lib  sfml-system.lib
libs/SFML-2.5.1/install/lib/cmake/SFML/: SFMLSharedTargets.cmake
modules/: CMakeLists.txt  WorkerPool.cpp  WorkerPool.h
